--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta name="keywords"
     content="dosing pump, chemical dosing pump, chemical pump, dosing pump manufacturers, diaphragm pump, diaphragm metering pump, chemical dosing system, diaphragm dosing pump, dosing system, plunger pump price, high pressure pump, progressive cavity pump, oil metering pump, diaphragm pump manufacturers, high pressure chemical pump, metering pump manufacturers in india, chemical dosing pump for water treatment plant, hydraulic pump price, chemical injection skid, electronic dosing pump, high pressure plunger pump, digital metering pump, positive metering pumps india pvt ltd nashik, screw pump manufacturers, high pressure triplex plunger pump, hydraulic plunger pump, chemical skid injection, progressive cavity screw pump, Electronic Dosing Pump Manufacturers, Solenoid Operated Pump, Mechanical Diaphragm Dosing Pumps, Acid Dosing Pump, Chlorine Dosing Pump, Metering Pump, chemical injection pump, pump hydrotest, flash mixer agitator, cooling Water System, pd Pump (Screw), pc pump (Other Pumps PC), Flocculators, flash mixer, stirrer, agitators, industrial mixers, Positive Displacement Pumps, Reciprocating Pumps, Electro Magnatic dosing Pumps, Motorized Dosing Pumps">
-
+  <meta name="description"
+    content="Positive Metering Pumps |    Explore our advanced industrial agitators, dosing pumps,    dosing skids, dosing systems, and injection packages.    Achieve precise mixing, accurate dosing, and efficient    chemical injection for various industrial applications.  ">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
