--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Positive Metring - Your trusted source for metering solutions." />
   <meta name="theme-color" content="#000000" />
+  <meta name="author" content="Positive Metering Pumps Pvt. Ltd.">
+  <meta name="publisher" content="Positive Metering Pumps Pvt. Ltd.">
+  <link rel="canonical" href="https://positivemetering.in/">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta name="keywords"
