--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,18 @@
     gtag('js', new Date());
     gtag('config', 'G-NKQ2N9YG9L');
   </script>
+
+  <!-- positivemetering.com -->
+  <!-- Google tag (gtag.js) -->
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QYG2H0X4QZ');
+  </script> -->
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
