--- a/public/index.html
+++ b/public/index.html
@@ -32,24 +32,24 @@
 
   <!-- positivemetering.ae -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-NKQ2N9YG9L');
-  </script>
+  </script> -->
 
   <!-- positivemetering.com -->
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-QYG2H0X4QZ');
-  </script> -->
+  </script>
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
