--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="publisher" content="Positive Metering Pumps Pvt. Ltd.">
   <link rel="canonical" href="https://positivemetering.in/">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/Group 1000003789.png" />
   <meta name="keywords"
     content="dosing pump, chemical dosing pump, chemical pump, dosing pump manufacturers, diaphragm pump, diaphragm metering pump, chemical dosing system, diaphragm dosing pump, dosing system, plunger pump price, high pressure pump, progressive cavity pump, oil metering pump, diaphragm pump manufacturers, high pressure chemical pump, metering pump manufacturers in india, chemical dosing pump for water treatment plant, hydraulic pump price, chemical injection skid, electronic dosing pump, high pressure plunger pump, digital metering pump, positive metering pumps india pvt ltd nashik, screw pump manufacturers, high pressure triplex plunger pump, hydraulic plunger pump, chemical skid injection, progressive cavity screw pump, Electronic Dosing Pump Manufacturers, Solenoid Operated Pump, Mechanical Diaphragm Dosing Pumps, Acid Dosing Pump, Chlorine Dosing Pump, Metering Pump, chemical injection pump, pump hydrotest, flash mixer agitator, cooling Water System, pd Pump (Screw), pc pump (Other Pumps PC), Flocculators, flash mixer, stirrer, agitators, industrial mixers, Positive Displacement Pumps, Reciprocating Pumps, Electro Magnatic dosing Pumps, Motorized Dosing Pumps">
   <meta name="description"
@@ -32,24 +32,24 @@
 
   <!-- positivemetering.ae -->
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-NKQ2N9YG9L');
-  </script> -->
+  </script>
 
   <!-- positivemetering.com -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-QYG2H0X4QZ');
-  </script>
+  </script> -->
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
