--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,15 @@
   </script> -->
 
   <!-- positivemetering.ae -->
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-NKQ2N9YG9L');
-  </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16615289869');
+</script>
 
   <!-- positivemetering.com -->
   <!-- Google tag (gtag.js) -->
