--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Positive Metering Pumps Pvt. Ltd.">
   <meta name="publisher" content="Positive Metering Pumps Pvt. Ltd.">
-  <link rel="canonical" href="https://positivemetering.in/">
+  <link rel="canonical" href="https://positivemetering.ae/">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/Group 1000003789.png" />
   <meta name="keywords"
@@ -32,13 +32,13 @@
 
   <!-- positivemetering.ae -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-16615289869');
+  gtag('config', 'G-NKQ2N9YG9L');
 </script>
 
   <!-- positivemetering.com -->
