--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Positive Metering Pumps Pvt. Ltd.">
   <meta name="publisher" content="Positive Metering Pumps Pvt. Ltd.">
-  <link rel="canonical" href="https://positivemetering.ae/">
+  <link rel="canonical" href="https://positivemetering.com/">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/Group 1000003789.png" />
   <meta name="keywords"
@@ -32,25 +32,35 @@
 
   <!-- positivemetering.ae -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-NKQ2N9YG9L');
-</script>
+</script> -->
 
   <!-- positivemetering.com -->
-  <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
 
-    gtag('config', 'G-QYG2H0X4QZ');
-  </script> -->
+  <!-- Google tag (gtag.js) --> 
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script> 
+   <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ'); </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16615289869');
+</script>
+
+<!-- Event snippet for form submission conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-16615289869/OpuWCM3SwIAaEI3o5PI9'});
+</script>
+
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
