--- a/public/index.html
+++ b/public/index.html
@@ -37,23 +37,24 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
+    </script> -->
 <!-- Google tag (gtag.js) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-NKQ2N9YG9L');
-</script> -->
+</script>
 
   <!-- positivemetering.com -->
 
   <!-- Google tag (gtag.js) --> 
-   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script> 
-   <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ'); </script>
+   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script> 
+   <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ'); </script> -->
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -64,10 +65,10 @@
 
   <!-- positivemetering.com -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
-<script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ'); </script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
+<script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ');
   gtag('config', 'AW-16615289869');
-</script>
+</script> -->
 
 <!-- Event snippet for form submission conversion page -->
 <script>
