--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Positive Metering Pumps Pvt. Ltd.">
   <meta name="publisher" content="Positive Metering Pumps Pvt. Ltd.">
-  <link rel="canonical" href="https://positivemetering.com/">
+  <link rel="canonical" href="https://positivemetering.ae/">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/Group 1000003789.png" />
   <meta name="keywords"
@@ -32,14 +32,8 @@
 
   <!-- positivemetering.ae -->
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    </script> -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -50,30 +44,16 @@
 
   <!-- positivemetering.com -->
 
-  <!-- Google tag (gtag.js) --> 
-   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script> 
-   <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ'); </script> -->
   <!-- Google tag (gtag.js) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-    gtag('config', 'G-NKQ2N9YG9L');
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ');
+    gtag('config', 'AW-16615289869');
   </script> -->
 
-  <!-- positivemetering.com -->
-<!-- Google tag (gtag.js) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
-<script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ');
-  gtag('config', 'AW-16615289869');
-</script> -->
-
-<!-- Event snippet for form submission conversion page -->
-<script>
-  gtag('event', 'conversion', {'send_to': 'AW-16615289869/OpuWCM3SwIAaEI3o5PI9'});
-</script>
+  <!-- Event snippet for form submission conversion page -->
+  <script>
+    gtag('event', 'conversion', { 'send_to': 'AW-16615289869/OpuWCM3SwIAaEI3o5PI9' });
+  </script>
 
 
   <!--
@@ -99,7 +79,7 @@
         }
       },{
         "@type": "Question",
-        "name": ""What types of dosing pumps are available?",
+        "name": "What types of dosing pumps are available?",
         "acceptedAnswer": {
           "@type": "Answer",
           "text": "Common types include electronic metering pumps, plunger metering pumps, hydraulically operated diaphragm pumps, mechanically actuated diaphragm pumps, and progressive cavity screw pumps."
