--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,27 @@
   <meta charset="utf-8" />
   <link rel="icon" href="./Group 1000003789.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Positive Metring - Your trusted source for metering solutions." />
+  <!-- <meta name="description" content="Positive Metring - Your trusted source for metering solutions." /> -->
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Positive Metering Pumps Pvt. Ltd.">
   <meta name="publisher" content="Positive Metering Pumps Pvt. Ltd.">
   <link rel="canonical" href="https://positivemetering.ae/">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/Group 1000003789.png" />
+
+  <!-- for ae -->
   <meta name="keywords"
+    content="Supplier of dosing pump in UAE Sharjah, List of supplier of dosing pump in UAE, Supplier of dosing pump in UAE contact number, Best supplier of dosing pump in UAE, Metering Pumps distributors in UAE, Dosing Pump suppliers in UAE, Chemical dosing pump, Dosing pump UAE">
+  <meta name="description"
+    content="Top UAE supplier of dosing pumps, agitators, and dosing systems. Designed for accurate chemical dosing in water, oil & gas, chemical, and food industries.">
+ 
+    <!-- for in and com -->
+    <!-- <meta name="keywords"
     content="dosing pump, chemical dosing pump, chemical pump, dosing pump manufacturers, diaphragm pump, diaphragm metering pump, chemical dosing system, diaphragm dosing pump, dosing system, plunger pump price, high pressure pump, progressive cavity pump, oil metering pump, diaphragm pump manufacturers, high pressure chemical pump, metering pump manufacturers in india, chemical dosing pump for water treatment plant, hydraulic pump price, chemical injection skid, electronic dosing pump, high pressure plunger pump, digital metering pump, positive metering pumps india pvt ltd nashik, screw pump manufacturers, high pressure triplex plunger pump, hydraulic plunger pump, chemical skid injection, progressive cavity screw pump, Electronic Dosing Pump Manufacturers, Solenoid Operated Pump, Mechanical Diaphragm Dosing Pumps, Acid Dosing Pump, Chlorine Dosing Pump, Metering Pump, chemical injection pump, pump hydrotest, flash mixer agitator, cooling Water System, pd Pump (Screw), pc pump (Other Pumps PC), Flocculators, flash mixer, stirrer, agitators, industrial mixers, Positive Displacement Pumps, Reciprocating Pumps, Electro Magnatic dosing Pumps, Motorized Dosing Pumps">
   <meta name="description"
     content="Positive Metering Pumps |    Explore our advanced industrial agitators, dosing pumps,    dosing skids, dosing systems, and injection packages.    Achieve precise mixing, accurate dosing, and efficient    chemical injection for various industrial applications.  ">
-  <!--
+    -->
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
@@ -31,23 +40,27 @@
   </script> -->
 
   <!-- positivemetering.ae -->
-  <!-- Google tag (gtag.js) -->
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKQ2N9YG9L"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869">
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-NKQ2N9YG9L');
+  gtag('config', 'AW-16615289869');
 </script>
 
   <!-- positivemetering.com -->
 
   <!-- Google tag (gtag.js) -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
-  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-QYG2H0X4QZ');
-    gtag('config', 'AW-16615289869');
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-QYG2H0X4QZ');
   </script> -->
 
   <!-- Event snippet for form submission conversion page -->
@@ -65,7 +78,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Positive Metering</title>
+      <!-- for com and in -->
+  <title>Positive Metering FZE | Supplier of Dosing Pumps, Agitators, and Dosing Systems in UAE, Abu Dhabi, Dubai</title>
+  <!-- for ae -->
+   <!-- <title>Positive Metering</title> -->
+
+   
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
