--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,13 @@
   <meta name="description"
     content="Top UAE supplier of dosing pumps, agitators, and dosing systems. Designed for accurate chemical dosing in water, oil & gas, chemical, and food industries.">
   -->
-    <!-- for in and com -->
-    <meta name="keywords"
+  <!-- for in and com -->
+  <meta name="keywords"
     content="dosing pump, chemical dosing pump, chemical pump, dosing pump manufacturers, diaphragm pump, diaphragm metering pump, chemical dosing system, diaphragm dosing pump, dosing system, plunger pump price, high pressure pump, progressive cavity pump, oil metering pump, diaphragm pump manufacturers, high pressure chemical pump, metering pump manufacturers in india, chemical dosing pump for water treatment plant, hydraulic pump price, chemical injection skid, electronic dosing pump, high pressure plunger pump, digital metering pump, positive metering pumps india pvt ltd nashik, screw pump manufacturers, high pressure triplex plunger pump, hydraulic plunger pump, chemical skid injection, progressive cavity screw pump, Electronic Dosing Pump Manufacturers, Solenoid Operated Pump, Mechanical Diaphragm Dosing Pumps, Acid Dosing Pump, Chlorine Dosing Pump, Metering Pump, chemical injection pump, pump hydrotest, flash mixer agitator, cooling Water System, pd Pump (Screw), pc pump (Other Pumps PC), Flocculators, flash mixer, stirrer, agitators, industrial mixers, Positive Displacement Pumps, Reciprocating Pumps, Electro Magnatic dosing Pumps, Motorized Dosing Pumps">
   <meta name="description"
     content="Positive Metering Pumps |    Explore our advanced industrial agitators, dosing pumps,    dosing skids, dosing systems, and injection packages.    Achieve precise mixing, accurate dosing, and efficient    chemical injection for various industrial applications.  ">
-   
-    <!--
+
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
@@ -40,8 +40,8 @@
   </script> -->
 
   <!-- positivemetering.ae -->
-<!-- Google tag (gtag.js) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869">
+  <!-- Google tag (gtag.js) -->
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16615289869">
 </script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -57,9 +57,9 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-  
+
     gtag('config', 'G-QYG2H0X4QZ');
   </script>
 
@@ -78,12 +78,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- for ae -->
-    <!-- <title>Positive Metering FZE | Supplier of Dosing Pumps, Agitators, and Dosing Systems in UAE, Abu Dhabi, Dubai</title> -->
-    <!-- for com and in -->
-   <title>Positive Metering</title>
+  <!-- for ae -->
+  <!-- <title>Positive Metering FZE | Supplier of Dosing Pumps, Agitators, and Dosing Systems in UAE, Abu Dhabi, Dubai</title> -->
+  <!-- for com and in -->
+  <title>Positive Metering</title>
 
-   
+
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -173,6 +173,29 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <script type="text/javascript">
+    _linkedin_partner_id = "8642249";
+    window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+    window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+  </script>
+  <script type="text/javascript">
+    (function (l) {
+      if (!l) {
+        window.lintrk = function (a, b) { window.lintrk.q.push([a, b]) };
+        window.lintrk.q = []
+      }
+      var s = document.getElementsByTagName("script")[0];
+      var b = document.createElement("script");
+      b.type = "text/javascript"; b.async = true;
+      b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+      s.parentNode.insertBefore(b, s);
+    })(window.lintrk);
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none;" alt=""
+      src="https://px.ads.linkedin.com/collect/?pid=8642249&fmt=gif" />
+  </noscript>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
