carousal api product added

--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,13 @@
     -->
 
   <!-- positivemetering.in -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V33EBNXF5L"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-V33EBNXF5L"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-V33EBNXF5L');
-  </script>
+  </script> -->
 
   <!-- positivemetering.ae -->
   <!-- Google tag (gtag.js) -->
@@ -54,14 +54,14 @@
   <!-- positivemetering.com -->
 
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-QYG2H0X4QZ');
-  </script> -->
+  </script>
 
   <!-- Event snippet for form submission conversion page -->
   <script>
