--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Positive Metering Pumps Pvt. Ltd.">
   <meta name="publisher" content="Positive Metering Pumps Pvt. Ltd.">
-  <link rel="canonical" href="https://positivemetering.com/">
+  <link rel="canonical" href="https://positivemetering.in/">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/Group 1000003789.png" />
 
@@ -31,13 +31,13 @@
     -->
 
   <!-- positivemetering.in -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-V33EBNXF5L"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V33EBNXF5L"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-V33EBNXF5L');
-  </script> -->
+  </script>
 
   <!-- positivemetering.ae -->
   <!-- Google tag (gtag.js) -->
@@ -54,14 +54,14 @@
   <!-- positivemetering.com -->
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYG2H0X4QZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-QYG2H0X4QZ');
-  </script>
+  </script> -->
 
   <!-- Event snippet for form submission conversion page -->
   <script>
